[develop][style] repair responsive image behavior on mobile

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -80,8 +80,7 @@ p {
     flex: 1;
     display: flex;
     justify-content: center;
-    padding-left: -20px;
-    padding-right: -20px;
+
 
     img {
         flex: none;
