--- a/src/app/rooms/components/room-details/room-details.component.scss
+++ b/src/app/rooms/components/room-details/room-details.component.scss
@@ -8,7 +8,8 @@ h2 {
 }
 
 img {
-    margin: 2%;
+    width: 100%;
+    height: unset;
 }
 
 .book-info {
@@ -39,6 +40,13 @@ mat-icon{
 //        height: 600px;
 //    }
 //}
+@media (min-width: 650px) {
+    img {
+        width: 600px;
+        height: 400px;
+        border-radius: 2%;
+    }
+}
 
 @media (min-width: 1200px) {
     article {
